<?xml version = "1.0"?>

<!-- ############################################################################ 
     #################### Aerial Control Module (ACM) - ARAV #################### 
     ############################################################################
     #################### Author : Alberto Ceballos Gonzalez #################### 
     ######## E-mail : alberto.ceballos-gonzalez@student.isae-supaero.fr ######## 
     ######### (c) Copyright 2022. Alberto Ceballos. All Rights Reserved ########  
     ############################################################################ -->
     
<package format = "2">

  <name>control</name>
  <version>1.0.0</version>
  <description>The aerial control module of ARAV</description>
  <maintainer email = "alberto.ceballos-gonzalez@student.isae-supaero.fr">Alberto Ceballos</maintainer>
  <license>(c) Copyright 2022. Alberto Ceballos. All Rights Reserved</license>
  <url type = "repository">https://github.com/ceballos-alberto/arav-air.git</url>
  <author email = "alberto.ceballos-gonzalez@student.isae-supaero.fr">Alberto Ceballos</author>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>  
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend> 
  <exec_depend>roscpp</exec_depend>
   
</package>

<!-- ############################################################################ 
     #################### Aerial Control Module (ACM) - ARAV #################### 
     ############################################################################
     #################### Author : Alberto Ceballos Gonzalez #################### 
     ######## E-mail : alberto.ceballos-gonzalez@student.isae-supaero.fr ######## 
     ######### (c) Copyright 2022. Alberto Ceballos. All Rights Reserved ########  
     ############################################################################ -->
