<?xml version = "1.0"?>

<!-- ############################################################################ 
     ###################### Self-Driving Simulator - ARAV ####################### 
     ############################################################################
     #################### Author : Alberto Ceballos Gonzalez #################### 
     ######## E-mail : alberto.ceballos-gonzalez@student.isae-supaero.fr ######## 
     ######### (c) Copyright 2022. Alberto Ceballos. All Rights Reserved ########  
     ############################################################################ -->

<package format = "2">

  <name>simulation</name>
  <version>1.0.0</version>
  <description>The simulation package of ARAV</description>
  <maintainer email = "alberto.ceballos-gonzalez@student.isae-supaero.fr">Alberto Ceballos</maintainer>
  <license>(c) Copyright 2022. Alberto Ceballos. All Rights Reserved</license>
  <url type = "repository">https://github.com/ceballos-alberto/arav-air.git</url>
  <author email = "alberto.ceballos-gonzalez@student.isae-supaero.fr">Alberto Ceballos</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cv2</build_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>cv2</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>rospy</exec_depend>
  
</package>

<!-- ############################################################################ 
     ###################### Self-Driving Simulator - ARAV ####################### 
     ############################################################################
     #################### Author : Alberto Ceballos Gonzalez #################### 
     ######## E-mail : alberto.ceballos-gonzalez@student.isae-supaero.fr ######## 
     ######### (c) Copyright 2022. Alberto Ceballos. All Rights Reserved ########  
     ############################################################################ -->

